# agent-k

./: .gitignore  .pre-commit-config.yaml  .python-version  .sourcery.yaml  CLAUDE.md  LICENSE  README.md  render.yaml  run.sh
.github/workflows/: ci.yml  docs.yml
backend/: Makefile  README.md  cli.py  mkdocs.yml  pyproject.toml  test_devstral.py  test_e2e_playbook.py
backend/agent_k/: __init__.py  __main__.py  _version.py
backend/agent_k/adapters/: __init__.py  _base.py  kaggle.py  openevolve.py
backend/agent_k/adapters/kaggle/: __init__.py  adapter.py  api.py  models.py
backend/agent_k/adapters/openevolve/: __init__.py  adapter.py  models.py
backend/agent_k/agents/: __init__.py  _base.py  base.py  evolver.py  lobbyist.py  lycurgus.py  prompts.py  scientist.py
backend/agent_k/agents/evolver/: __init__.py  agent.py  prompts.py  tools.py
backend/agent_k/agents/lobbyist/: __init__.py  agent.py  agent_devstral.py  prompts.py  tools.py
backend/agent_k/agents/lycurgus/: __init__.py  agent.py  prompts.py  tools.py
backend/agent_k/agents/scientist/: __init__.py  agent.py  prompts.py  tools.py
backend/agent_k/core/: __init__.py  constants.py  data.py  deps.py  exceptions.py  models.py  protocols.py  settings.py  solution.py  types.py
backend/agent_k/embeddings/: __init__.py  embedder.py  retriever.py  store.py
backend/agent_k/evals/: __init__.py  datasets.py  discovery.yaml  evaluators.py  evolution.yaml  submission.yaml
backend/agent_k/graph/: __init__.py  edges.py  nodes.py  persistence.py  state.py
backend/agent_k/infra/: __init__.py  config.py  instrumentation.py  logging.py  models.py  providers.py
backend/agent_k/mission/: __init__.py  edges.py  nodes.py  persistence.py  state.py
backend/agent_k/services/: __init__.py  competition.py  evolution.py  submission.py
backend/agent_k/toolsets/: __init__.py  browser.py  code.py  code_executor.py  kaggle.py  memory.py  scholarly.py  search.py
backend/agent_k/ui/: __init__.py  ag_ui.py  event_stream.py
backend/agent_k/ui/ag_ui/: __init__.py  __main__.py  adapter.py  app.py  event_stream.py  intent_parser.py  stream_transformer.py
backend/agent_k/ui/console/: __init__.py  app.py
backend/docs/: contributing.md  index.md  install.md  quick-start.md
backend/docs/agents/: evolver.md  lobbyist.md  lycurgus.md  scientist.md
backend/docs/api/agents/: evolver.md  lobbyist.md  lycurgus.md  scientist.md
backend/docs/api/core/: exceptions.md  models.md
backend/docs/api/graph/: nodes.md  state.md
backend/docs/api/infra/: models.md  providers.md
backend/docs/api/mission/: nodes.md  state.md
backend/docs/api/toolsets/: kaggle.md  memory.md  search.md
backend/docs/concepts/: agents.md  graph.md  mission-lifecycle.md  models.md  toolsets.md
backend/docs/examples/: custom-agent.md  multi-agent-demo.md  setup.md
backend/docs/toolsets/: kaggle.md  memory.md  search.md
backend/docs/ui/: ag-ui.md  dashboard.md
backend/examples/: __init__.py  devstral_discovery.py  devstral_mission.py  mission_memory.json  multi_agent_playbook.py
backend/tests/: __init__.py  conftest.py
backend/tests/adapters/: __init__.py  test_kaggle_adapter.py  test_openevolve.py
backend/tests/agents/: __init__.py  test_evolver.py  test_evolver_mutations.py  test_lobbyist.py  test_lycurgus.py  test_scientist.py
backend/tests/core/: __init__.py  test_data.py  test_exceptions.py  test_models.py  test_solution.py
backend/tests/embeddings/: __init__.py  test_retriever.py  test_store.py
backend/tests/graph/: __init__.py  test_nodes.py  test_state.py
backend/tests/infra/: __init__.py  test_models.py
backend/tests/mission/: __init__.py  test_baseline.py  test_nodes.py  test_state.py
backend/tests/toolsets/: __init__.py  test_kaggle.py  test_memory.py  test_search.py
backend/tests/ui/: __init__.py  test_ag_ui.py
docs/: render.example.yaml
frontend/: .env.example  README.md  middleware.ts  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: auth.ts
frontend/app/(chat)/: actions.ts  layout.tsx  page.tsx
frontend/app/(chat)/api/agent-k/: route.ts
frontend/app/(chat)/api/chat/: route.ts  schema.ts
frontend/app/(chat)/api/competitions/fetch/: route.ts
frontend/app/(chat)/api/competitions/search/: route.ts
frontend/app/(chat)/api/mission/[missionId]/stream/: route.ts
frontend/app/(chat)/api/mission/best-results/: route.ts
frontend/app/(chat)/api/mission/start/: route.ts
frontend/components/: chat-header.tsx  chat.tsx  data-stream-handler.tsx  greeting.tsx  messages.tsx  suggested-actions.tsx
frontend/components/agent-k/: best-results.tsx  competition-preview.tsx  competition-selection-gate.tsx  competition-selector.tsx  direct-url-input.tsx  evolution-model-selector.tsx  evolution-settings.tsx  evolution-view.tsx  fitness-chart.tsx  logs-view.tsx  memory-view.tsx  mission-dashboard.tsx  mission-stream.tsx  phase-card.tsx  plan-view.tsx  quick-start.tsx  research-view.tsx  search-criteria-form.tsx  task-card.tsx  tool-call-card.tsx
frontend/hooks/: use-agent-k-state.tsx
frontend/lib/: concurrent-limit.ts  constants.ts  errors.ts  rate-limit.ts  types.ts  utils.ts  validation.ts
frontend/lib/ai/: agent-k-models.ts  entitlements.ts  models.ts  prompts.ts  providers.ts
frontend/lib/db/: schema.ts  token-usage.ts
frontend/lib/db/migrations/: 0008_token_usage.sql
frontend/lib/db/migrations/meta/: _journal.json
frontend/lib/types/: agent-k.ts  events.ts
frontend/lib/utils/: best-results.ts  json-patch.ts  kaggle.ts  time.ts
frontend/tests/e2e/: session.test.ts
