[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-k"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
description = "AGENT-K multi-agent Kaggle competition framework"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic-ai>=0.2.0",
    "httpx>=0.27.0",
    "logfire>=0.44.0",
    "pydantic-graph>=0.2.0",
    "opentelemetry-api>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "dirty-equals>=0.7.0",
    "inline-snapshot>=0.8.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.14.0",
    "pydantic-evals>=0.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
agent-k = "agent_k.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_k"]

# =============================================================================
# uv Configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "dirty-equals>=0.7.0",
    "inline-snapshot>=0.8.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.14.0",
    "pydantic-evals>=0.2.0",
]

[tool.uv.sources]
# Add any git/local sources here if needed

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "UP040",   # TypeAlias annotation - griffe doesn't support PEP 695 type statement
    "UP046",   # Generic class with Generic subclass - griffe doesn't support PEP 695
    "UP047",   # Generic function with type parameters - griffe doesn't support PEP 695
    "TC003",   # Move import into type-checking block - not always desirable
]

[tool.ruff.lint.isort]
known-first-party = ["agent_k"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
