[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-k"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
description = "AGENT-K multi-agent Kaggle competition framework"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic-ai>=0.2.0",
    "httpx>=0.27.0",
    "logfire>=0.44.0",
    "pydantic-graph>=0.2.0",
    "opentelemetry-api>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "dirty-equals>=0.7.0",
    "inline-snapshot>=0.8.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.14.0",
    "pydantic-evals>=0.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
agent-k = "agent_k.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_k"]

# =============================================================================
# uv Configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "dirty-equals>=0.7.0",
    "inline-snapshot>=0.8.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.14.0",
    "pydantic-evals>=0.2.0",
]

[tool.uv.sources]
# Add any git/local sources here if needed

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
extend-select = [
    "Q",        # flake8-quotes
    "RUF100",   # unused noqa
    "RUF018",   # assignment in assert
    "C90",      # mccabe complexity
    "UP",       # pyupgrade
    "I",        # isort
    "D",        # pydocstyle
    "TID251",   # banned imports
    "PLW1514",  # unspecified encoding
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 15 }
ignore = [
    "D100",    # missing module docstring
    "D102",    # missing public method docstring
    "D104",    # missing public package docstring
    "D105",    # missing magic method docstring
    "D107",    # missing __init__ docstring
    "UP040",   # TypeAlias annotation - griffe doesn't support PEP 695 type statement
    "UP046",   # Generic class with Generic subclass - griffe doesn't support PEP 695
    "UP047",   # Generic function with type parameters - griffe doesn't support PEP 695
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["agent_k"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TypedDict".msg = "Use typing_extensions.TypedDict instead."
"typing.assert_never".msg = "Use typing_extensions.assert_never instead."

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
